--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-gantt-schedule-timeline-calendar",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "main": "src/GSTC.js",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
