--- a/package.json
+++ b/package.json
@@ -31,5 +31,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "keywords": [
+    "react",
+    "gantt",
+    "react gantt",
+    "schedule",
+    "react schedule",
+    "react scheduler",
+    "scheduler",
+    "react timeline",
+    "timeline",
+    "react calendar",
+    "calendar",
+    "react project manager",
+    "project manager"
+  ]
 }
