--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react calendar",
     "calendar",
     "react project manager",
-    "project manager"
+    "project manager",
+    "react tasks",
+    "tasks"
   ]
 }
